deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apachezz-deployment
  namespace: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: vishrut0/project:latest
        ports:
        - containerPort: 80  
      #   volumeMounts:
      #   - mountPath: /mnt/data
      #     name: my-volume
      # volumes:
      #   - name: my-volume
      #     persistentVolumeClaim:
      #       claimName: local-pvc
