apache-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: apache
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
