service.yml
kind: Service
apiVersion: v1
metadata:
  name: apache-service
  namespace: apache
spec:
  clusterIP: None
  ports:
    - name: apache
      port: 80
      targetPort: 80
  selector:
    app: apache
